spade-tests/src/snapshots/spade_tests__const_generics__simple_unsatisfied_int_constraint_in_where_clause_on_impl_block_errors.snap
---
source: spade-tests/src/const_generics.rs
---
impl <#uint N, #uint O> int<N>
where O: { N + 2 }
{
    fn add_one(self) -> int<O> {
        self + 1
    }
}

fn test() -> int<10> {
    10i8.add_one()
}


error: Expected type int<10>, got int<9>
  ┌─ testinput:5:9
  │
5 │         self + 1
  │         ^^^^^^^^ Expected int<10>, got int<9>
  │
  = note: Expected: 10
                in: int<10>
               Got: 9
                in: int<9>
  = note: Addition creates one more output bit than the input to avoid overflow
  = The error is in a generic unit instantiated at
    ╰ testinput:10 impl_10::add_one<8, 10>
